--- a/app/src/components/Tile.module.less
+++ b/app/src/components/Tile.module.less
@@ -2,29 +2,38 @@
 
 .tile-box {
   display: block;
-  padding: 24px;
+  flex-direction: row;
   padding: 30px;
   margin: 30px;
-  background-color: transparent;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 50px 50px 50px 50px;
 }
 
 .tile {
-  display: inline-block;
+  display: flex;
+  align-items: center;
   text-align: left;
 }
 
+.icon {
+  display: flex;
+  flex-direction: column;
+}
+
 .img {
-  display: block;
   text-align: center;
   padding: 50px;
 }
 
 .appName {
-  display: block;
+  color: black;
   text-align: center;
 }
 
 .desc {
-  display: inline-block;
+  color: black;
   text-align: left;
+  padding: 30px;
+  word-wrap: break-word;
+  width: 2300px;
 }
